--- a/src/content/blockchain/solana-accounts-archivers.mdx
+++ b/src/content/blockchain/solana-accounts-archivers.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Solana: Accounts & Archivers',
   description: 'The information in the Solana network is persisted, not only in a distributed and decentralized manner among its nodes, but all data is persisted in file format.'
 }
+prev: 'solana-cloudbreak'
+next: 'solana-wrap-up'
 ---
 
 # Solana: Accounts & Archivers
