--- a/src/content/blockchain/solana-architecture.mdx
+++ b/src/content/blockchain/solana-architecture.mdx
@@ -7,6 +7,7 @@ englishMetadata: {
   title: 'The Architecture Behind Solana',
   description: 'Solana is a system, the sum of its parts makes it up and throughout this set of articles you will see how each of those logical pieces works. You will also understand the development and execution flow of contracts within the network of this blockchain.'
 }
+next: 'solana-vs-ethereum'
 ---
 
 # La Arquitectura Detrás De Solana
