--- a/src/content/blockchain/solana-cloudbreak.mdx
+++ b/src/content/blockchain/solana-cloudbreak.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Solana: Cloudbreak',
   description: 'Solana differs from other Blockchains by not using a database. Instead, it implements information saving logic using both RAM and SSD for different purposes, which was called Cloudbreak.'
 }
+prev: 'solana-pipelining'
+next: 'solana-accounts-archivers'
 ---
 
 # Solana: Cloudbreak
