--- a/src/content/blockchain/solana-ecosystem.mdx
+++ b/src/content/blockchain/solana-ecosystem.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Solana Ecosystem',
   description: 'Exploring Solana: complementary tools and resources that you should know as a developer to deploy smart contracts on this blockchain.'
 }
+prev: 'solana-vs-ethereum'
+next: 'solana-proof-of-history'
 ---
 
 # Ecosistema Solana
