--- a/src/content/blockchain/solana-gulf-stream.mdx
+++ b/src/content/blockchain/solana-gulf-stream.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Solana: Gulf Stream',
   description: 'The propagation of information through all the nodes of the Solana network is carried out deterministically, in such a way that bandwidth is saved and information flows more quickly.'
 }
+prev: 'solana-turbine'
+next: 'solana-sealevel'
 ---
 
 # Solana: Gulf Stream
