--- a/src/content/blockchain/solana-sealevel.mdx
+++ b/src/content/blockchain/solana-sealevel.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Solana: Sealevel',
   description: 'Solana is an optimized Blockckain in several ways, whether in the use of the network and the transfer of information, in its way of reaching a consensus and keeping the network secure and also in the parallel execution of programs.'
 }
+prev: 'solana-gulf-stream'
+next: 'solana-pipelining'
 ---
 
 # Solana: Sealevel
