--- a/src/content/blockchain/solana-tower-bft.mdx
+++ b/src/content/blockchain/solana-tower-bft.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Solana: Tower BFT',
   description: 'Consensus protocols such as PoW or PoS have the main objective of avoiding data corruption and must tolerate a certain percentage of failed or malicious nodes.'
 }
+prev: 'solana-proof-of-history'
+next: 'solana-turbine'
 ---
 
 # Solana: Tower BFT
