--- a/src/content/blockchain/solana-turbine.mdx
+++ b/src/content/blockchain/solana-turbine.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Solana: Turbine',
   description: 'The Solana Blockchain component called Turbine is responsible for the rapid and effective transmission of information on the network.'
 }
+prev: 'solana-tower-bft'
+next: 'solana-gulf-stream'
 ---
 
 # Solana: Turbine
