--- a/src/content/blockchain/solana-vs-ethereum.mdx
+++ b/src/content/blockchain/solana-vs-ethereum.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Solana vs. Ethereum',
   description: 'To understand what Solana is and the reason for its great benefits, it is important to analyze the historical context of other Blockchains to have a point of comparison.'
 }
+prev: 'solana-architecture'
+next: 'solana-ecosystem'
 ---
 
 # Solana vs. Ethereum
