--- a/src/content/blockchain/solana-wrap-up.mdx
+++ b/src/content/blockchain/solana-wrap-up.mdx
@@ -7,6 +7,7 @@ englishMetadata: {
   title: 'Solana: Summary of Operation Architecture',
   description: 'Summary of the operation of Solana components that make it so special compared to other Blockchains such as Ethereum or Bitcoin.'
 }
+prev: 'solana-accounts-archivers'
 ---
 
 # Solana: Resumen Funcionamiento Arquitectura
@@ -39,7 +40,7 @@ Finalmente, la propia infraestructura de software de Solana implementa múltiple
 
 Solana es un largo camino súper técnico y complicado para entender cómo funciona Solana por dentro. Espero que tantos conceptos sobre redes de computadoras, arquitectura de software, microchips, hardware, tantas herramientas y tecnologías que tal vez sean nuevas para ti, haya sido ameno el aprendizaje y entendimiento de este ecosistema denominado Solana.
 
-Sin duda, Solana es una magnifica obra de ingeniería de software.
+**Sin duda, Solana es una magnifica obra de ingeniería de software.**
 
 ---
 Post creado en colaboración con el **Curso de Solana** de **Platzi**.
