--- a/src/content/blockchain/ethereum-erc1155-token.mdx
+++ b/src/content/blockchain/ethereum-erc1155-token.mdx
@@ -63,3 +63,5 @@ El estándar ERC1155 permite solucionar casos de uso más avanzados donde múlti
 
 Solo se requiere que la imaginación vuele para encontrar los mejores usos tanto para el estándar ERC1155, como para el ERC20 y ERC721. Saber cuándo aplicar cada uno y desarrollar de la forma más eficiente nuestros contratos inteligentes y resolver variadas reglas de negocio.
 
+---
+Post creado en colaboración con el [Curso de OpenZeppelin](https://external.ink?to=https://platzi.com/cursos/openzeppelin/) de **Platzi**.
