--- a/src/content/blockchain/ethereum-erc20-token.mdx
+++ b/src/content/blockchain/ethereum-erc20-token.mdx
@@ -53,3 +53,6 @@ El estándar ERC20 recibe tanto un nombre como un símbolo para identificar al t
 A partir de implementación del contrato, podemos **construir la lógica de emisión de tokens de nuestro contrato dependiendo la regla de negocio**. Definir la cantidad máxima de tokens que existirán, la cantidad de decimales en los cuales se podrán dividir o transferir los mismos.
 
 Si bien podemos utilizar la implementación del estándar ERC20 de OpenZeppelin, también es muy aconsejable estudiar cómo se realizan dichas implementaciones de las propuestas de mejora de Ethereum y, por qué no, animarnos a realizar nosotros mismos nuestra propia implementación.
+
+---
+Post creado en colaboración con el [Curso de OpenZeppelin](https://external.ink?to=https://platzi.com/cursos/openzeppelin/) de **Platzi**.
