--- a/src/content/blockchain/ethereum-erc721-token.mdx
+++ b/src/content/blockchain/ethereum-erc721-token.mdx
@@ -54,3 +54,6 @@ El tokenId debe ser único, en caso de ya estar utilizado el ID, el contrato emi
 Si tu contrato implementa de manera correcta el estándar ERC721, el mismo será **compatible con la red de Ethereum** y podrás ver tus NFT en plataformas como OpenSea que es una de las más populares del mundo para la transferencia de los mismos.
 
 El estándar ERC721 para la creación de NFT es, tal vez, uno de los casos de uso que más gente atrae al mundo crypto. Estudiarlo te permitirá ser competitivo en el mercado laboral y estarás listo para ser un gran desarrollador Web3.
+
+---
+Post creado en colaboración con el [Curso de OpenZeppelin](https://external.ink?to=https://platzi.com/cursos/openzeppelin/) de **Platzi**.
