--- a/src/content/blockchain/solidity-cross-reentrancy-attack.mdx
+++ b/src/content/blockchain/solidity-cross-reentrancy-attack.mdx
@@ -161,4 +161,4 @@ Siempre es aconsejable configurar el gas disponible para un llamado externo
 Hemos visto hasta aquí que el depósito, retiro o transferencia de valor entre cuentas o contratos **es un tema que no debe tomarse a la ligera**. Muchas variables que pueden escaparse y provocar desastres económicos, como muchos que ya han sucedido en la industria. Como desarrolladores Web3, **tenemos la responsabilidad de cuidar el ecosistema y que sea un lugar confiable para depositar nuestro dinero**.
 
 ---
-Post creado en colaboración con el [Curso de Introducción a Seguridad de Smart Contracts](https://platzi.com/clases/2721-seguridad-smart-contracts/45718-denegacion-por-reversion/) de **Platzi**.
+Post creado en colaboración con el [Curso de Seguridad de Smart Contracts](https://external.ink?to=https://platzi.com/cursos/seguridad-smart-contracts/) de **Platzi**.
