--- a/src/content/blockchain/bitcoin-inputs-outputs.mdx
+++ b/src/content/blockchain/bitcoin-inputs-outputs.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Bitcoin: Transacciones, Entradas y Salidas'
 description: 'El funcionamiento técnico y la lógica de las transacciones en la Blockchain de Bitcoin explican por qué se trata de un excelente sistema de pagos mundial y descentralizado al lograr evitar problemas como el doble gasto.'
-image: '/tech/solana.webp'
-pubDate: '08/15/2023'
+image: '/tech/bitcoin.png'
+pubDate: '05/01/2023'
 englishMetadata: {
   title: 'Bitcoin: Transactions, Inputs & Outputs',
   description: 'The technical operation and logic of transactions in the Bitcoin Blockchain explain why it is an excellent global and decentralized payment system by avoiding problems such as double spending.'
@@ -60,6 +60,7 @@ En este ejemplo, el output de Alice tiene como destino a Bob, mientras que el in
 Los inputs y outputs utilizan mecanismos de encriptación y comprobación de las claves para su utilización. Es así como **una wallet guarda las claves privadas para la utilización de un UTXO** (de una salida) y la misma es capaz de demostrar ser el owner de fracciones de bitcoin. Todo este complejo mecanismo es posible gracias al lenguaje de programación llamado Bitcoin Script.
 
 ## Conclusión
+
 La transferencia de valor en Bitcoin es un mecanismo complejo, que seguramente tengas que leer varias veces y apoyarte de otras fuentes para entender en profundidad sobre cómo se construye las transacciones a partir de entradas y salidas.
 
 Es posiblemente la gran innovación de Satoshi Nakamoto para la construcción de este gran sistema de pagos e intercambio de valor, como lo es la Blockchain de Bitcoin.
