--- a/src/content/blockchain/bitcoin-inputs-outputs.mdx
+++ b/src/content/blockchain/bitcoin-inputs-outputs.mdx
@@ -24,12 +24,12 @@ Las transacciones son la parte más importante de todo el sistema que **permiten
 
 El concepto de inputs y outputs es esencial para comprender el funcionamiento de una transacción.
 
-- **Outputs:**
-  - También denominados UTXO
-  - Fragmentos de BTC representado en Satoshis
+**Outputs:**
+- También denominados UTXO
+- Fragmentos de BTC representado en Satoshis
 
-- **Inputs:**
-  - Identifican qué UTXO utilizarán para una transacción y proveen una prueba de propiedad para el uso del mismo.
+**Inputs:**
+- Identifican qué UTXO utilizarán para una transacción y proveen una prueba de propiedad para el uso del mismo.
 
 > UTXO o *Unspent Transaction Output* (transacción de salida no gastada) es otro término para los outputs y hacen referencia a fracciones de BTC que solo pueden ser utilizadas una vez y evitar así el problema del doble gasto.
 
