--- a/src/content/blockchain/bitcoin-architecture.mdx
+++ b/src/content/blockchain/bitcoin-architecture.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Bitcoin: P2P Architecture',
   description: 'The infrastructure behind any Blockchain has unique characteristics to achieve the decentralization of a service and make all its nodes equal.'
 }
+prev: 'bitcoin-overview'
+next: 'bitcoin-blocks'
 ---
 
 ## Bitcoin: Arquitectura P2P
@@ -79,3 +81,6 @@ Por supuesto, también ha favorecido a la creación de implementaciones similare
 ## Conclusiones
 
 El funcionamiento de toda la red de Bitcoin es grande y complejo de resumir. Siempre es aconsejable leer el [libro blanco de Bitcoin](https://external.ink?to=https://bitcoin.org/files/bitcoin-paper/bitcoin_es.pdf) si es de tu interés técnico comprender más en profundidad su funcionamiento técnico.
+
+---
+Post creado en colaboración con el [Curso de Bitcoin](https://external.ink?to=https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
