--- a/src/content/blockchain/bitcoin-blocks.mdx
+++ b/src/content/blockchain/bitcoin-blocks.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Bitcoin: Structure and Mining of a Block',
   description: 'A Blockchain is a “chain of blocks” that are linked to each other, forming, as its name indicates, a chain that is impossible to break.'
 }
+prev: 'bitcoin-architecture'
+next: 'bitcoin-transaction-fees'
 ---
 
 # Bitcoin: Estructura y Minado De Un Bloque
@@ -110,3 +112,5 @@ Comprender su funcionamiento nos dará mayor contexto para poder trabajar profes
 
 El mecanismo de transacciones y minado de bloques de la Blockchain de Bitcoin explica por qué este se convierte en un excelente sistema de pagos. Es una obra de ingeniería de software admirable.
 
+---
+Post creado en colaboración con el [Curso de Bitcoin](https://external.ink?to=https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
