--- a/src/content/blockchain/bitcoin-cli.mdx
+++ b/src/content/blockchain/bitcoin-cli.mdx
@@ -7,6 +7,7 @@ englishMetadata: {
   title: 'Bitcoin CLI',
   description: 'A CLI is a text-line interface that helps us interact with a project, obtain information, execute tasks, etc. The Bitcoin CLI is very similar to others that you may already know and allows us to interact with the blockchain.'
 }
+prev: 'bitcoin-script'
 ---
 
 Un CLI (command-line interface) es una interfaz de línea de texto que nos ayuda a interactuar con un proyecto, obtener información, ejecutar tareas, etc. **El CLI de Bitcoin es muy similar a otros que tal vez ya conozcas**.
@@ -102,6 +103,5 @@ Has visto lo fácil que es utilizar el bitcoin-cli para crear una wallet, direcc
 
 Recuerda que estos comandos funcionan a través de RPC sobre HTTP, por lo que son las bases para construir cualquier aplicación web o móvil como un explorador de bitcoin, una wallet u otro tipo de app para el intercambio de valor entre usuarios.
 
-
-
-
+---
+Post creado en colaboración con el [Curso de Bitcoin](https://external.ink?to=https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
