--- a/src/content/blockchain/bitcoin-core.mdx
+++ b/src/content/blockchain/bitcoin-core.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Bitcoin Core',
   description: 'Bitcoin, like all OpenSource software, has its source code, features and processes defined so that its community can make it grow and evolve. It has several implementations and one of the most used is called Bitcoin Core.'
 }
+prev: 'bitcoin-merkle-trees'
+next: 'bitcoin-script'
 ---
 
 # Bitcoin Core
@@ -141,3 +143,6 @@ El Bitcoin Core es todo un sistema con sus partes. Dentro del mismo encontramos 
 El Bitcoin Core es la base de todo lo que hoy conocemos con el nombre de Blockchain. Aquella criptomoneda que Satoshi Nakamoto lanzó con el nombre de bitcoin en el 2009 y que al día de hoy ha evolucionado y se ha fortalecido hasta convertirse en este gran sistema económico.
 
 Sin duda es solo el inicio y Bitcoin aún tiene mucho por crecer y por darle al mundo Blockchain como principal referente en este ecosistema de tecnologías Web3.
+
+---
+Post creado en colaboración con el [Curso de Bitcoin](https://external.ink?to=https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
