--- a/src/content/blockchain/bitcoin-forks.mdx
+++ b/src/content/blockchain/bitcoin-forks.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Bitcoin Forks',
   description: 'Blocks in a Blockchain are generated incessantly. Each miner proposes its block, but only one manages to have it added to the chain, while all the other blocks are discarded.'
 }
+prev: 'bitcoin-wallets-and-keys'
+next: 'bitcoin-merkle-trees'
 ---
 
 # Bitcoin Forks
@@ -60,3 +62,6 @@ Las bifurcaciones se generan todo el tiempo y cada Blockchain las procesa de una
 También pueden producirse forks cuando un nodo tiene problemas de sincronización con respecto a sus pares, no necesariamente se trata siempre de un ataque.
 
 Lo importante siempre será el consenso entre los nodos de una Blockchain y la bifurcación que demuestre más poder de computo ganará y se unirá a la cadena.
+
+---
+Post creado en colaboración con el [Curso de Bitcoin](https://external.ink?to=https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
