--- a/src/content/blockchain/bitcoin-inputs-outputs.mdx
+++ b/src/content/blockchain/bitcoin-inputs-outputs.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Bitcoin: Transactions, Inputs & Outputs',
   description: 'The technical operation and logic of transactions in the Bitcoin Blockchain explain why it is an excellent global and decentralized payment system by avoiding problems such as double spending.'
 }
+prev: 'bitcoin-transaction-fees'
+next: 'bitcoin-wallets-and-keys'
 ---
 
 # Bitcoin: Transacciones, Entradas y Salidas
@@ -64,3 +66,6 @@ Los inputs y outputs utilizan mecanismos de encriptación y comprobación de las
 La transferencia de valor en Bitcoin es un mecanismo complejo, que seguramente tengas que leer varias veces y apoyarte de otras fuentes para entender en profundidad sobre cómo se construye las transacciones a partir de entradas y salidas.
 
 Es posiblemente la gran innovación de Satoshi Nakamoto para la construcción de este gran sistema de pagos e intercambio de valor, como lo es la Blockchain de Bitcoin.
+
+---
+Post creado en colaboración con el [Curso de Bitcoin](https://external.ink?to=https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
