--- a/src/content/blockchain/bitcoin-merkle-trees.mdx
+++ b/src/content/blockchain/bitcoin-merkle-trees.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Bitcoin: Merkle Trees',
   description: 'Merkle trees are used to summarize and verify large data sets. Without it, all the information on the Blockchain would be much heavier, making it more difficult to compute.'
 }
+prev: 'bitcoin-forks'
+next: 'bitcoin-core'
 ---
 
 # Bitcoin: Árboles de Merkle
@@ -46,3 +48,6 @@ Nuevamente, solicitamos las hojas `hIJ` y `hKL` desde este punto para realizar l
 El algoritmo para encriptar y desencriptar un árbol de Merkle puede ser un reto más que interesante para ti si te propones desarrollar tu propia implementación con el lenguaje que más te guste.
 
 Esta es la manera en que la Blockchain de Bitcoin asegura la integridad de la información y vuelve a esta gran base de datos inmutable. Cualquier alteración malintencionada en una transacción, simplemente el resto de los nodos, lo detectaría y no llegarían a un consenso.
+
+---
+Post creado en colaboración con el [Curso de Bitcoin](https://external.ink?to=https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
