--- a/src/content/blockchain/bitcoin-overview.mdx
+++ b/src/content/blockchain/bitcoin-overview.mdx
@@ -7,6 +7,7 @@ englishMetadata: {
   title: 'Bitcoin Overview',
   description: 'Blockchain is the name of the technology that is below any cryptocurrency such as bitcoin or ether. Its operation revolutionized technology around the world and we have not yet seen everything it is capable of.'
 }
+next: 'bitcoin-architecture'
 ---
 
 # Bitcoin Overview
@@ -96,3 +97,6 @@ Existen cada vez más ecosistemas en el mundo relacionados con esta tecnología 
 ## Conclusión
 
 Sin duda, la persona detrás de Satoshi Nakamoto pensó muy bien cómo crear toda una economía descentralizada y perdurable durante más de un siglo. Con conceptos innovadores tanto para la industria de la tecnología como para los economistas.
+
+---
+Post creado en colaboración con el [Curso de Bitcoin](https://external.ink?to=https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
