--- a/src/content/blockchain/bitcoin-script.mdx
+++ b/src/content/blockchain/bitcoin-script.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Bitcoin Script',
   description: 'The operation of transactions on the Bitcoin Blockchain has a logical reason, its own programming language called Bitcoin Script.'
 }
+prev: 'bitcoin-core'
+next: 'bitcoin-cli'
 ---
 
 # Bitcoin Script
@@ -84,3 +86,6 @@ El lenguaje Bitcoin Script **ha ido solucionando bugs y evolucionado con los añ
 ## Conclusión
 
 Ahora entiendes cómo funciona por detrás Bitcoin Script. Se trata de un lenguaje de programación poco convencional y algo más difícil de utilizar, ya que los desarrolladores estamos acostumbrados a los condicionales, ciclos de iteración, clases, etc.
+
+---
+Post creado en colaboración con el [Curso de Bitcoin](https://external.ink?to=https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
