--- a/src/content/blockchain/bitcoin-transaction-fees.mdx
+++ b/src/content/blockchain/bitcoin-transaction-fees.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Bitcoin: Transaction Fees',
   description: 'Every transaction in a Blockchain has a commission, or fee, to encourage the miner to prioritize, process and confirm it.'
 }
+prev: 'bitcoin-blocks'
+next: 'bitcoin-inputs-outputs'
 ---
 
 # Bitcoin: Comisiones De Transacción
@@ -52,3 +54,6 @@ El mecanismo por detrás de Bitcoin para establecer el costo de las comisiones e
 Muchos de los conceptos vistos aquí como el cálculo de las comisiones dependiendo el estado de la red o el valor de retorno, no deben preocuparnos si utilizamos billeteras como Metamask, ya que realizan todos los cálculos por nosotros y hasta permiten personalizar el costo de las transacciones.
 
 Todos estos son conceptos a tener en cuenta si deseamos trabajar con Bitcoin y desarrollar nuestros propios programas para la transferencia de valor.
+
+---
+Post creado en colaboración con el [Curso de Bitcoin](https://external.ink?to=https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
