--- a/src/content/blockchain/bitcoin-wallets-and-keys.mdx
+++ b/src/content/blockchain/bitcoin-wallets-and-keys.mdx
@@ -7,6 +7,8 @@ englishMetadata: {
   title: 'Bitcoin: Wallets & Keys',
   description: 'The operation of the Bitcoin Blockchain is based on keys and addresses. Although at first glance they may appear to be just cryptographic hashes in hexadecimal format, these elements are intrinsically related and fulfill key functions in the network.'
 }
+prev: 'bitcoin-inputs-outputs'
+next: 'bitcoin-forks'
 ---
 
 # Bitcoin: Wallets & Llaves
@@ -161,3 +163,6 @@ Si vas a guardar valor y grandes sumas de dinero en criptomonedas, busca la mejo
 ## Conclusión
 
 El estudio de las Blockchain requiere una comprensión profunda de la criptografía, aunque no necesariamente implique programar algoritmos. Es fundamental conocer los estándares y características para su correcta aplicación en proyectos reales. Además, es crucial utilizar herramientas confiables y responsabilizarse por el manejo seguro de las claves privadas, adoptando prácticas seguras y conscientes para proteger nuestros activos.
+
+---
+Post creado en colaboración con el [Curso de Bitcoin](https://external.ink?to=https://platzi.com/cursos/bitcoin-developers/) de **Platzi**.
