Solidity articles OK

--- a/src/content/blockchain/solidity-dos-attack.mdx
+++ b/src/content/blockchain/solidity-dos-attack.mdx
@@ -7,7 +7,8 @@ englishMetadata: {
   title: 'Solidity: Revert DoS Attack',
   description: 'Smart contracts can be victims of denial-of-service attacks and blocked in such a way that millions of dollars are lost and can never be recovered.'
 }
-next: 'solidity-reentrancy-attack'
+prev: 'solidity-external-calls'
+next: 'solidity-dos-gas'
 ---
 
 # Solidity: Ataque DoS Por Reversión
