--- a/src/content/blockchain/solidity-reentrancy-attack.mdx
+++ b/src/content/blockchain/solidity-reentrancy-attack.mdx
@@ -7,7 +7,7 @@ englishMetadata: {
   title: 'Solidity: Reetrancy Attack',
   description: 'One of the most common security problems is called Reetrancy, which causes recursive calls to the same function of a contract until the funds are emptied.'
 }
-prev: 'solidity-dos-attack'
+prev: 'solidity-dos-gas'
 next: 'solidity-cross-reentrancy-attack'
 ---
 
