--- a/src/content/blockchain/web2-vs-web3.mdx
+++ b/src/content/blockchain/web2-vs-web3.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Web2 vs. Web3'
 description: 'Una mirada sobre el gran cambio que las tecnologías Web3 trajeron al desarrollo de software en comparación con el tradicional paradigma Web2.'
-image: '/tech/ethereum.webp'
+image: '/tech/blockchain.png'
 pubDate: '09/01/2023'
 englishMetadata: {
   title: 'Web2 vs. Web3',
